[gd_scene load_steps=3 format=3 uid="uid://bh33nxl5la75u"]

[ext_resource type="Script" uid="uid://xloftdml64ss" path="res://scripts/CombatScene.gd" id="1_gc2ly"]
[ext_resource type="Script" uid="uid://du2bwatj653eq" path="res://scripts/TurnOrderUI.gd" id="2_4j82b"]

[node name="CombatScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gc2ly")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TurnOrderBar" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 300.0
offset_top = 50.0
offset_right = 1620.0
offset_bottom = 120.0
script = ExtResource("2_4j82b")

[node name="TurnLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 660.0
offset_top = 150.0
offset_right = 1260.0
offset_bottom = 200.0
text = "Turno do Jogador"
horizontal_alignment = 1

[node name="PlayerTeam" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 50.0
offset_top = 250.0
offset_right = 450.0
offset_bottom = 450.0

[node name="FrontLabel" type="Label" parent="UI/PlayerTeam"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
text = "üõ°Ô∏è FRONT: Carregando..."
autowrap_mode = 3

[node name="BackLabel" type="Label" parent="UI/PlayerTeam"]
layout_mode = 0
offset_top = 110.0
offset_right = 400.0
offset_bottom = 200.0
text = "‚öîÔ∏è BACK: Carregando..."
autowrap_mode = 3

[node name="EnemyTeam" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 1070.0
offset_top = 250.0
offset_right = 1470.0
offset_bottom = 450.0

[node name="FrontLabel" type="Label" parent="UI/EnemyTeam"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 90.0
text = "üî• FRONT: Inimigo"
autowrap_mode = 3

[node name="BackLabel" type="Label" parent="UI/EnemyTeam"]
layout_mode = 0
offset_top = 110.0
offset_right = 400.0
offset_bottom = 200.0
text = "üî• BACK: Inimigo"
autowrap_mode = 3

[node name="AttackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 610.0
offset_top = 480.0
offset_right = 810.0
offset_bottom = 530.0
text = "üó°Ô∏è Ataque B√°sico"

[node name="SpecialButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 830.0
offset_top = 480.0
offset_right = 1030.0
offset_bottom = 530.0
text = "‚ö° Ataque Especial"

[node name="SwitchButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 610.0
offset_top = 550.0
offset_right = 810.0
offset_bottom = 600.0
text = "üîÑ Trocar Posi√ß√£o"

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 830.0
offset_top = 550.0
offset_right = 1030.0
offset_bottom = 600.0
text = "üèÉ Fugir"

[node name="CombatLogPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 1400.0
offset_top = 150.0
offset_right = 1750.0
offset_bottom = 450.0

[node name="LogTitle" type="Label" parent="UI/CombatLogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 340.0
offset_bottom = 35.0
text = "üìú Log de Combate"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/CombatLogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 340.0
offset_bottom = 290.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CombatLogPanel/ScrollContainer"]
layout_mode = 2
